--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,13 +1,9 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.JarvisV2" parent="Theme.Material3.Light.NoActionBar">
+    <style name="Base.Theme.JarvisV2" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
-
-
         <item name="font">@font/ubuntu_mono_regular</item>
         <item name="android:statusBarColor">@color/black</item>
-
     </style>
 
     <style name="Theme.JarvisV2" parent="Base.Theme.JarvisV2" />
