--- a/app/src/main/res/layout/fragment_robot_list_screen.xml
+++ b/app/src/main/res/layout/fragment_robot_list_screen.xml
@@ -6,9 +6,11 @@
     tools:context=".fragments.RobotListScreenFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <Button
+        android:id="@+id/moveChatBtn"
+        android:layout_gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:text="Come here, talk to me inside,," />
 
 </FrameLayout>
