chat screen receiver and sender messages ui lookings created

--- a/app/src/main/res/layout/item_receiver.xml
+++ b/app/src/main/res/layout/item_receiver.xml
@@ -18,9 +18,11 @@
         android:textAlignment="textStart"
         android:textStyle="bold"
         tools:text="Receiver Message"
+        android:textColor="@color/black"
         />
     <TextView
         android:id="@+id/txt_date"
+        android:textColor="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginVertical="10dp"
