--- a/app/src/main/res/layout/item_sender.xml
+++ b/app/src/main/res/layout/item_sender.xml
@@ -11,8 +11,9 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginVertical="4dp"
-        android:layout_marginEnd="24dp"
-        android:layout_marginStart="10dp"
+        android:layout_gravity="end"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="24dp"
         android:background="@drawable/bg_sender"
         >
         <TextView
@@ -23,6 +24,7 @@
             android:layout_marginHorizontal="10dp"
             android:textAlignment="textStart"
             android:textStyle="bold"
+            android:textColor="@color/white"
             android:fontFamily="@font/ubuntu_mono_regular"
             tools:text="Receiver Message"
             />
@@ -33,7 +35,8 @@
             android:layout_height="wrap_content"
             android:layout_marginVertical="10dp"
             android:layout_marginHorizontal="10dp"
-            android:textAlignment="textStart"
+            android:layout_gravity="end"
+            android:textColor="@color/white"
             tools:text="Jul 10,2024 6:00 PM"
             android:textSize="12sp"
 
