--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -17,7 +16,7 @@
         android:foreground="?android:attr/selectableItemBackground"
         android:src="@drawable/ic_back" />
 
-    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
+    <com.google.android.material.card.MaterialCardView
         android:id="@+id/robot_image_ll"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -31,7 +30,7 @@
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:src="@drawable/aicolor" />
-    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>
+    </com.google.android.material.card.MaterialCardView>
 
     <TextView
         android:id="@+id/titleTxt"
