--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,8 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.JarvisV2" parent="Theme.AppCompat.Light.NoActionBar">
+    <style name="Base.Theme.JarvisV2" parent="Theme.Material3.Light.NoActionBar">
         <!-- Customize your light theme here. -->
-        <item name="font">@font/ubuntu_mono_regular</item>
+        <item name="fontFamily">@font/ubuntu_mono_regular</item>
         <item name="android:statusBarColor">@color/black</item>
     </style>
 
