--- a/app/src/main/res/layout/item_receiver.xml
+++ b/app/src/main/res/layout/item_receiver.xml
@@ -3,15 +3,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_marginVertical="4dp"
     android:layout_marginEnd="24dp"
     android:layout_marginStart="10dp"
-    android:background="@drawable/bg_receiver"
-    >
+    android:background="@drawable/bg_receiver">
+
+    <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/typing_lav"
+        android:layout_width="70dp"
+        android:layout_height="40dp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginVertical="10dp"
+        app:lottie_autoPlay="true"
+        app:lottie_loop="true"
+        app:lottie_rawRes="@raw/typing_animation"/>
     <TextView
         android:id="@+id/txt_message"
         android:layout_width="wrap_content"
+        android:visibility="gone"
         android:layout_height="wrap_content"
         android:layout_marginVertical="10dp"
         android:layout_marginHorizontal="10dp"
@@ -25,6 +36,7 @@
         android:textColor="@color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         android:layout_marginVertical="10dp"
         android:layout_marginHorizontal="10dp"
         android:textAlignment="textStart"
