--- a/app/src/main/res/layout/fragment_chat_screen.xml
+++ b/app/src/main/res/layout/fragment_chat_screen.xml
@@ -7,7 +7,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.ChatScreenFragment">
 
-    <include layout="@layout/toolbar_layout"/>
+    <include
+        android:id="@+id/toolbarLayout"
+        layout="@layout/toolbar_layout"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/chat_rv"
@@ -15,7 +17,9 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:orientation="vertical"
-        android:paddingTop="?actionBarSize"
+        android:layout_below="@+id/toolbarLayout"
+        app:reverseLayout="true"
+        app:stackFromEnd="true"
         android:layout_above="@id/rl_send"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
 
