--- a/app/src/main/res/layout/toolbar_layout.xml
+++ b/app/src/main/res/layout/toolbar_layout.xml
@@ -34,12 +34,14 @@
 
     <TextView
         android:id="@+id/titleTxt"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:layout_marginStart="10dp"
+        android:layout_marginHorizontal="10dp"
         android:layout_toEndOf="@+id/robot_image_ll"
         android:fontFamily="@font/ubuntu_mono_regular"
+        android:singleLine="true"
         android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold"
