--- a/app/src/main/res/layout/view_robot_layout.xml
+++ b/app/src/main/res/layout/view_robot_layout.xml
@@ -2,7 +2,78 @@
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginHorizontal="10dp"
-    android:layout_marginVertical="4dp">
+    android:layout_marginVertical="4dp"
+    app:cardBackgroundColor="@color/white"
+    app:cardElevation="10dp"
+    android:foreground="?android:attr/selectableItemBackground">
+
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="10dp">
+
+
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/robot_image_ll"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_alignParentStart="true"
+            app:strokeColor="@color/mainBackgroundColor"
+            app:strokeWidth="1dp">
+
+            <ImageView
+                android:id="@+id/robot_image"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:src="@drawable/aicolor" />
+        </com.google.android.material.card.MaterialCardView>
+
+        <TextView
+            android:id="@+id/robotNameTxt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginHorizontal="8dp"
+            android:layout_toEndOf="@+id/robot_image_ll"
+            android:layout_toStartOf="@+id/editDeleteLL"
+            android:fontFamily="@font/ubuntu_mono_regular"
+            android:singleLine="true"
+            android:textColor="@color/mainBackgroundColor"
+            android:textSize="20sp"
+            android:textStyle="bold"
+            tools:text="Jarvis V2" />
+
+
+        <LinearLayout
+            android:id="@+id/editDeleteLL"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_centerVertical="true"
+            android:layout_alignParentEnd="true">
+
+            <ImageView
+                android:id="@+id/editImage"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_marginVertical="4dp"
+                android:src="@drawable/baseline_edit_24"/>
+            <ImageView
+                android:id="@+id/deleteImage"
+                android:layout_width="35dp"
+                android:layout_height="35dp"
+                android:layout_marginVertical="4dp"
+                android:src="@drawable/ic_delete"/>
+
+
+
+
+        </LinearLayout>
+    </RelativeLayout>
 
 </com.google.android.material.card.MaterialCardView>
