all robots are working correctly, cattle is the first robot .)

--- a/app/src/main/res/layout/fragment_robot_list_screen.xml
+++ b/app/src/main/res/layout/fragment_robot_list_screen.xml
@@ -3,11 +3,27 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/mainBackgroundColor"
     tools:context=".fragments.RobotListScreenFragment">
 
     <include
         android:id="@+id/toolbarLayout"
         layout="@layout/toolbar_layout"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/robotRV"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/toolbarLayout"
+        android:layout_centerHorizontal="true"
+        android:clipToPadding="true"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:orientation="vertical"
+        android:overScrollMode="never"
+        android:paddingBottom="100dp"
+        tools:listitem="@layout/view_robot_layout"
+        />
 
     <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
         android:id="@+id/addRobotFabBtn"
