--- a/app/src/main/res/layout/fragment_chat_screen.xml
+++ b/app/src/main/res/layout/fragment_chat_screen.xml
@@ -68,7 +68,7 @@
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_alignParentEnd="true"
-            android:backgroundTint="@color/mainBackgroundColor"
+            android:backgroundTint="@color/white"
             android:layout_centerVertical="true"
             android:layout_marginHorizontal="8dp"
             android:background="@drawable/bg_send_btn"
