--- a/app/src/main/res/layout/fragment_robot_list_screen.xml
+++ b/app/src/main/res/layout/fragment_robot_list_screen.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="#D8D3D3"
+    android:background="#CABFBF"
     tools:context=".fragments.RobotListScreenFragment">
 
     <include
@@ -32,7 +32,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_margin="16dp"
-        android:backgroundTint="@color/black"
+        android:backgroundTint="#03A9F4"
         android:text="Add Robot"
         android:textColor="@color/white"
         android:textSize="18sp"
