--- a/app/src/main/res/layout/fragment_image_gen_screen.xml
+++ b/app/src/main/res/layout/fragment_image_gen_screen.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/mainBackgroundColor"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@color/chatBackgroundColor"
     android:orientation="vertical"
     tools:context=".fragments.ImageGenScreenFragment">
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    >
     <include
         android:id="@+id/toolbar_layout"
         layout="@layout/toolbar_layout" />
@@ -110,11 +115,41 @@
         android:background="@drawable/textviewbackground"
         android:fontFamily="@font/ubuntu_mono_regular"
         android:text="Genereate"
-        android:textColor="@color/white"
+        android:textColor="#03A9F4"
         android:layout_marginVertical="8dp"
         android:layout_marginHorizontal="16dp"
         android:textSize="24sp"
         android:textStyle="bold" />
 
+    <ProgressBar
+        android:id="@+id/loadingPB"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        style="?android:attr/progressBarStyleLarge"/>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/imageRv"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+        app:spanCount="2"
+        tools:listitem="@layout/view_image_layout"
+        android:orientation="vertical"
+        android:overScrollMode="never"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/downloadAllBtn"
+        android:layout_width="match_parent"
+        android:layout_height="?actionBarSize"
+        android:background="@drawable/textviewbackground"
+        android:fontFamily="@font/ubuntu_mono_regular"
+        android:text="Download All Image"
+        android:visibility="gone"
+        android:textColor="#03A9F4"
+        android:layout_marginVertical="8dp"
+        android:layout_marginHorizontal="16dp"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 </LinearLayout>
+</ScrollView>
